--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -25,14 +25,15 @@ android {
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
+    //api fileTree(dir: 'libs', include: ['*.jar'])
     api 'com.android.support.constraint:constraint-layout:1.1.3'
     api 'com.android.support:appcompat-v7:27.1.1'
     api 'com.android.support:design:27.1.1'
     api 'io.reactivex.rxjava2:rxjava:2.2.2'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 //    api project(":core")
-    api "io.github.prototypez:app-joint-core:1.6.1"
+    //api "io.github.prototypez:app-joint-core:1.6.1"
+    api files("${rootDir}/aar/app-joint-core.jar")
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
